[dependencies]

[workspace]
members = [
    # DOES NOT BUILD ON WINDOWS
    # "winit-0.18.0"
    # "glium-0.22.0",
    "gleam-0.6.8",
    "euclid-0.19.4",
    "rusttype-0.7.3",
    "app_units-0.7.1",
    "unicode-normalization-0.1.7",
    "lazy_static-1.2.0",
    # "tinyfiledialogs-3.3.5",
    # "clipboard2-0.1.1",
    # "font-loader-0.7.0",
    # "serde-1.0.80",
    "log-0.4.6",
    "stb_truetype-0.2.2",
    # "fern-0.5.7",
    # "backtrace-0.3.12",
    # "lyon-0.11.0",
    # "twox-hash-1.1.2",
    # "usvg-0.3.0",
    # "image-0.20.1",



    # "adler32-1.0.3",
    # "andrew-0.1.4",
    # "android_glue-0.2.3",
    # "app_units-0.7.1",
    # "approx-0.3.1",
    # "arrayref-0.3.5",
    # "arrayvec-0.4.8",
    # "azul_glium-0.22.0",
    # "backtrace-0.3.12",
    # "backtrace-sys-0.1.24",
    # "base64-0.9.3",
    # "binary-space-partition-0.1.2",
    # "bincode-1.0.1",
    # "bitflags-1.0.4",
    # "block-0.1.6",
    # "block-buffer-0.3.3",
    # "byte-tools-0.2.0",
    # "byteorder-1.2.7",
    # "cc-1.0.26",
    # "cfg-if-0.1.6",
    # "cgl-0.2.3",
    # "clipboard-win-2.1.2",
    # "clipboard2-0.1.1",
    # "cloudabi-0.0.3",
    # "cmake-0.1.35",
    # "cocoa-0.18.4",
    # "color_quant-1.0.1",
    # "core-foundation-0.6.3",
    # "core-foundation-sys-0.6.2",
    # "core-graphics-0.17.3",
    # "core-text-13.1.1",
    # "crc32fast-1.1.2",
    # "crossbeam-deque-0.2.0",
    # "crossbeam-epoch-0.3.1",
    # "crossbeam-utils-0.2.2",
    # "deflate-0.7.19",
    # "digest-0.7.6",
    # "dlib-0.4.1",
    # "downcast-rs-1.0.3",
    # "dwrote-0.6.3",
    # "either-1.5.0",
    # "euclid-0.19.4",
    # "expat-sys-2.1.6",
    # "fake-simd-0.1.2",
    # "fern-0.5.7",
    # "float-cmp-0.4.0",
    # "fnv-1.0.6",
    # "font-loader-0.7.0",
    # "foreign-types-0.3.2",
    # "foreign-types-shared-0.1.1",
    # "freetype-0.4.1",
    # "fuchsia-zircon-0.3.3",
    # "fuchsia-zircon-sys-0.3.3",
    # "fxhash-0.2.1",
    # "gcc-0.3.55",
    # "gdi32-sys-0.2.0",
    # "generic-array-0.9.0",
    # "gif-0.10.1",
    # "gl_generator-0.10.0",
    # "gleam-0.6.8",
    # "glutin-0.19.0",
    # "image-0.20.1",
    # "inflate-0.4.4",
    # "jpeg-decoder-0.1.15",
    # "khronos_api-3.0.0",
    # "lazy_static-1.2.0",
    # "libc-0.2.45",
    # "libflate-0.1.19",
    # "libloading-0.5.0",
    # "line_drawing-0.7.0",
    # "lock_api-0.1.5",
    # "log-0.4.6",
    # "lyon-0.11.0",
    # "lyon_algorithms-0.11.2",
    # "lyon_geom-0.12.2",
    # "lyon_path-0.11.0",
    # "lyon_tessellation-0.11.0",
    # "lzw-0.10.0",
    # "malloc_buf-0.0.6",
    # "memmap-0.7.0",
    # "memoffset-0.2.1",
    # "nfd-0.0.4",
    # "nix-0.12.0",
    # "nodrop-0.1.13",
    # "num-derive-0.2.3",
    # "num-integer-0.1.39",
    # "num-iter-0.1.37",
    # "num-rational-0.2.1",
    # "num-traits-0.2.6",
    # "num_cpus-1.9.0",
    # "objc-0.2.5",
    # "objc-foundation-0.1.1",
    # "objc_id-0.1.1",
    # "ordered-float-1.0.1",
    # "osmesa-sys-0.1.2",
    # "owning_ref-0.4.0",
    # "parking_lot-0.6.4",
    # "parking_lot_core-0.3.1",
    # "percent-encoding-1.0.1",
    # "phf-0.7.23",
    # "phf_shared-0.7.23",
    # "pkg-config-0.3.14",
    # "plane-split-0.13.3",
    # "png-0.12.0",
    # "proc-macro2-0.4.24",
    # "quote-0.6.10",
    # "rand-0.6.1",
    # "rand_chacha-0.1.0",
    # "rand_core-0.3.0",
    # "rand_hc-0.1.0",
    # "rand_isaac-0.1.1",
    # "rand_pcg-0.1.1",
    # "rand_xorshift-0.1.0",
    # "rayon-1.0.3",
    # "rayon-core-1.4.1",
    # "rctree-0.2.1",
    # "redox_syscall-0.1.44",
    # "roxmltree-0.1.0",
    # "rustc-demangle-0.1.9",
    # "rustc_version-0.2.3",
    # "rusttype-0.7.3",
    # "safemem-0.3.0",
    # "same-file-1.0.4",
    # "scoped_threadpool-0.1.9",
    # "scopeguard-0.3.3",
    # "semver-0.9.0",
    # "semver-parser-0.7.0",
    # "serde-1.0.80",
    # "serde_bytes-0.10.4",
    # "serde_derive-1.0.80",
    # "servo-fontconfig-0.4.0",
    # "servo-fontconfig-sys-4.0.7",
    # "servo-freetype-sys-4.0.5",
    # "sha2-0.7.1",
    # "shared_library-0.1.9",
    # "sid-0.5.2",
    # "simplecss-0.1.0",
    # "siphasher-0.2.3",
    # "slab-0.4.1",
    # "smallvec-0.6.7",
    # "smithay-client-toolkit-0.4.3",
    # "stable_deref_trait-1.1.1",
    # "stb_truetype-0.2.2",
    # "svgdom-0.14.0",
    # "svgtypes-0.2.0",
    # "syn-0.15.22",
    # "thread_profiler-0.1.3",
    # "tiff-0.2.1",
    # "time-0.1.40",
    # "tinyfiledialogs-3.3.5",
    # "twox-hash-1.1.2",
    # "typenum-1.10.0",
    # "unicode-normalization-0.1.7",
    # "unicode-segmentation-1.2.1",
    # "unicode-xid-0.1.0",
    # "unreachable-1.0.0",
    # "user32-sys-0.2.0",
    # "usvg-0.3.0",
    # "void-1.0.2",
    # "walkdir-2.2.7",
    # "wayland-client-0.21.7",
    # "wayland-commons-0.21.7",
    # "wayland-protocols-0.21.7",
    # "wayland-scanner-0.21.7",
    # "wayland-sys-0.21.7",
    # "webrender-0.57.2",
    # "webrender_api-0.57.2",
    # "winapi-0.3.6",
    # "winapi-build-0.1.1",
    # "winapi-i686-pc-windows-gnu-0.4.0",
    # "winapi-util-0.1.1",
    # "winapi-x86_64-pc-windows-gnu-0.4.0",
    # "winit-0.18.0",
    # "x11-clipboard-0.3.0",
    # "x11-dl-2.18.3",
    # "xcb-0.8.2",
    # "xdg-2.2.0",
    # "xml-rs-0.8.0",
    # "xmlparser-0.6.1",
]
# Important path: azul-dependencies\block-0.1.6\test_utils\Cargo.toml