[package]
name = "andrew"
version = "0.2.0"
authors = ["Lucas Timmins <timmins.s.lucas@gmail.com>"]
description = "The andrew crate provides convenient drawing of objects such as shapes, lines and text to buffers"
repository = "https://github.com/trimental/andrew"
readme = "README.md"
keywords = ["draw", "buffer", "shapes", "lines", "pixels"]
categories = ["rendering", "multimedia::images"]
license = "MIT"

[dependencies.bitflags]
version = "1.0.4"
path = "../bitflags-1.0.4"

[dependencies.line_drawing]
version = "0.7.0"
path = "../line_drawing-0.7.0"

[dependencies.rusttype]
version = "0.7.3"
path = "../rusttype-0.7.3"

[dependencies.walkdir]
version = "2.0"
path = "../walkdir-2.2.7"

[dependencies.xdg]
version = "2.2.0"
path = "../xdg-2.2.0"

[dependencies.xml-rs]
version = "0.8.0"
path = "../xml-rs-0.8.0"

