[package]
name = "servo-fontconfig"
version = "0.4.0"
authors = ["The Servo Project Developers"]
repository = "https://github.com/servo/rust-fontconfig/"
documentation = "https://docs.rs/servo-fontconfig"
description = "Rust bindings for fontconfig"
license=  "MIT / Apache-2.0"

[lib]
name = "fontconfig"

[dependencies.libc]
version = "0.2.45"
path = "../libc-0.2.45"

[dependencies.servo-fontconfig-sys]
version = "4.0.7"
path = "../servo-fontconfig-sys-4.0.7"