[package]
name = "tinyfiledialogs"
description = "High-level Rust binding for the tinyfiledialogs C library."
version = "3.3.5"
authors = ["Guillaume Vareille <vareille@users.sourceforge.net>", "Josh Matthews <josh@joshmatthews.net>"]
license = "zlib-acknowledgement"
readme = "README.md"
keywords = ["dialog", "ui", "windows", "unix"]
repository = "https://github.com/jdm/tinyfiledialogs-rs"

build = "build.rs"

[lib]
name = "tinyfiledialogs"

[dependencies.libc]
version = "0.2.45"
path = "../libc-0.2.45"

[build-dependencies.cc]
version = "1.0.26"
path = "../cc-1.0.26"

