[package]
name = "wayland-client"
version = "0.23.0"
documentation = "https://smithay.github.io/wayland-rs/wayland_client/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Victor Berger <victor.berger@m4x.org>"]
license = "MIT"
categories = ["gui", "api-bindings"]
keywords = ["wayland", "client"]
description = "Bindings to the standard C implementation of the wayland protocol, client side."
build = "build.rs"

[badges]
travis-ci = { repository = "Smithay/wayland-rs" }

[dependencies.wayland-commons]
version = "0.23.0"
path = "../wayland-commons-0.23.0"

[dependencies.wayland-sys]
version = "0.23.0"
path = "../wayland-sys-0.23.0"

[dependencies.nix]
version = "0.12.0"
path = "../nix-0.12.0"

[dependencies.downcast-rs]
version = "1.0.3"
path = "../downcast-rs-1.0.3"

[dependencies.bitflags]
version = "1.0.4"
path = "../bitflags-1.0.4"

[dependencies.libc]
version = "0.2.45"
path = "../libc-0.2.45"

[build-dependencies.wayland-scanner]
version = "0.23.0"
path = "../wayland-scanner-0.23.0"

[features]
native_lib = [ "wayland-sys/client" ]
dlopen = ["wayland-sys/dlopen", "native_lib"]
egl = ["wayland-sys/egl", "native_lib"]
cursor = ["wayland-sys/cursor", "native_lib"]
