[package]
name = "wayland-protocols"
version = "0.23.0"
documentation = "https://smithay.github.io/wayland-rs/wayland_protocols/"
repository = "https://github.com/smithay/wayland-rs"
authors = ["Victor Berger <victor.berger@m4x.org>"]
license = "MIT"
keywords = ["wayland", "client", "server", "protocol", "extension"]
description = "Generated API for the officials wayland protocol extensions"
build = "build.rs"
categories = ["gui", "api-bindings"]

[badges]
travis-ci = { repository = "Smithay/wayland-rs" }

[dependencies.wayland-commons]
version = "0.23.0"
path = "../wayland-commons-0.23.0"

[dependencies.wayland-client]
version = "0.23.0"
path = "../wayland-client-0.23.0"
optional = true

[dependencies.bitflags]
version = "1.0.4"
path = "../bitflags-1.0.4"

[build-dependencies.wayland-scanner]
version = "0.23.0"
path = "../wayland-scanner-0.23.0"

[features]
client = ["wayland-client"]
unstable_protocols = []

[package.metadata.docs.rs]
all-features = true
