[package]
name = "wayland-scanner"
version = "0.23.0"
authors = ["Victor Berger <victor.berger@m4x.org>"]
repository = "https://github.com/smithay/wayland-rs"
documentation = "https://smithay.github.io/wayland-rs/wayland_scanner/"
description = "Wayland Scanner for generating rust APIs from XML wayland protocol files. Intented for use with wayland-sys. You should only need this crate if you are working on custom wayland protocol extensions. Look at the crate wayland-client for usable bindings."
license = "MIT"
categories = ["gui", "api-bindings"]
keywords = ["wayland", "codegen"]

[badges]
travis-ci = { repository = "Smithay/wayland-rs" }

[dependencies.xml-rs]
version = "0.8.0"
path = "../xml-rs-0.8.0"

[dependencies.proc-macro2]
version = "0.4.24"
path = "../proc-macro2-0.4.24"

[dependencies.quote]
version = "0.6.10"
path = "../quote-0.6.10"
