[package]
name = "wayland-sys"
version = "0.23.0"
repository = "https://github.com/smithay/wayland-rs"
documentation = "https://smithay.github.io/wayland-rs/wayland_sys/"
authors = ["Victor Berger <victor.berger@m4x.org>"]
description = "FFI bindings to the various libwayland-*.so libraries. You should only need this crate if you are working on custom wayland protocol extensions. Look at the crate wayland-client for usable bindings."
license = "MIT"
categories = ["external-ffi-bindings"]

[badges]
travis-ci = { repository = "Smithay/wayland-rs" }

[dependencies.dlib]
version = "0.4.1"
path = "../dlib-0.4.1"
optional = true

[dependencies.libc]
version = "0.2.45"
path = "../libc-0.2.45"
optional = true

[dependencies.lazy_static]
version = "1.2.0"
path = "../lazy_static-1.2.0"
optional = true

[features]
dlopen = ["dlib/dlopen", "lazy_static"]
client = [ "dlib" ]
cursor = [ "client" ]
egl = [ "client" ]
server = ["libc", "dlib" ]

[package.metadata.docs.rs]
all-features = true
