[package]
name = "webrender"
version = "0.57.2"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
description = "A GPU accelerated 2D renderer for web content"
build = "build.rs"

[features]
default = ["freetype-lib"]
freetype-lib = ["freetype/servo-freetype-sys"]
profiler = ["thread_profiler/thread_profiler", "debug_renderer"]
debug_renderer = []
serialize_program = ["serde"]

[dependencies]
app_units = { version = "0.7.1", path = "../app_units-0.7.1" }
bincode = { version = "1.0.1", path = "../bincode-1.0.1" }
bitflags = { version = "1.0.4", path = "../bitflags-1.0.4" }
byteorder = { version = "1.2.7", path = "../byteorder-1.2.7" }
cfg-if = { version = "0.1.6", path = "../cfg-if-0.1.6" }
fxhash = { version = "0.2.1", path = "../fxhash-0.2.1" }
gleam = { version = "0.6.8", path = "../gleam-0.6.8" }
image = { optional = true, version = "0.20.1", path = "../image-0.20.1" }
lazy_static = { version = "1.2.0", path = "../lazy_static-1.2.0" }
log = { version = "0.4.6", path = "../log-0.4.6" }
num-traits = { version = "0.2.6", path = "../num-traits-0.2.6" }
plane-split = { version = "0.13.3", path = "../plane-split-0.13.3" }
png = { optional = true, version = "0.12.0", path = "../png-0.12.0" }
rayon = { version = "1.0.3", path = "../rayon-1.0.3" }
serde = { optional = true, version = "1.0.80", path = "../serde-1.0.80", features = ["serde_derive"] }
smallvec = { version = "0.6.7", path = "../smallvec-0.6.7" }
thread_profiler = { version = "0.1.3", path = "../thread_profiler-0.1.3" }
time = { version = "0.1.40", path = "../time-0.1.40" }
webrender_api = { version = "0.57.2", path = "../webrender_api-0.57.2" }

[target.'cfg(any(target_os = "android", all(unix, not(target_os = "macos"))))'.dependencies]
freetype = { version = "0.4.1", path = "../freetype-0.4.1", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = { version = "0.6.3", path = "../dwrote-0.6.3", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.6.3", path = "../core-foundation-0.6.3" }
core-graphics = { version = "0.17.3", path = "../core-graphics-0.17.3" }
core-text = { version = "13.1.1", path = "../core-text-13.1.1", default-features = false }
