[package]
name = "webrender_api"
version = "0.57.2"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
description = "Public API for WebRender"

[features]
nightly = ["euclid/unstable", "serde/unstable"]
serialize = []
deserialize = []

[dependencies]
app_units = { version = "0.7.1", path = "../app_units-0.7.1" }
bincode = { version = "1.0.1", path = "../bincode-1.0.1" }
bitflags = { version = "1.0.4", path = "../bitflags-1.0.4" }
byteorder = { version = "1.2.7", path = "../byteorder-1.2.7" }
euclid = { version = "0.19.4", path = "../euclid-0.19.4", features = ["serde"] }
serde = { version = "1.0.80", path = "../serde-1.0.80", features = ["rc"] }
serde_derive = { version = "1.0.80", path = "../serde_derive-1.0.80", features = ["deserialize_in_place"] }
serde_bytes = { version = "0.10.4", path = "../serde_bytes-0.10.4" }
time = { version = "0.1.40", path = "../time-0.1.40" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.6.3", path = "../core-foundation-0.6.3" }
core-graphics = { version = "0.17.3", path = "../core-graphics-0.17.3" }

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = { version = "0.6.3", path = "../dwrote-0.6.3", default-features = false, features = ["serde_serialization"] }
